<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/genderLabel"
        style="@style/MainTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genderText"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.001"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberInputLayout" />

    <ImageView
        android:id="@+id/catImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nameInputLayout"
        app:srcCompat="@drawable/cat" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/MyNameInput"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/numberInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLength="40" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:boxBackgroundColor="@color/purple"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:hint="@string/input_humber_hint"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/genderLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="53dp"
        android:layout_height="71dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/switch_material"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberInputLayout">


        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/radio_button_1_text"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/radio_button_2_text"
            android:textSize="@dimen/default_text_size" />
    </RadioGroup>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchText"
        app:thumbTint="@color/purple"
        app:trackTint="@color/material_dynamic_neutral80"
        app:layout_constraintBottom_toTopOf="@+id/checkbox1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox1"
        style="@style/Widget.App.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/loginCheckboxText"
        app:layout_constraintBottom_toTopOf="@+id/checkbox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_material"
        />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox2"
        style="@style/Widget.App.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/infoCheckboxText"
        app:layout_constraintBottom_toTopOf="@+id/scoreView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox1" />

    <TextView
        android:id="@+id/scoreView"
        style="@style/MainTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreText"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox2" />

    <TextView
        android:id="@+id/scoreValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreValueText"
        android:textSize="@dimen/default_text_size"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox2" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="10dp"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreView"
        app:trackCornerRadius="@dimen/track_corner_radius" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/buttonText"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>